--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -46,7 +46,7 @@
                             <h6>25€</h6>
                         </dd>
                     </dl>
-                    <div class="validation-plat"h5>
+                    <div class="validation-plat">
                         <i class="fa-solid fa-circle-check validation-plat__icon"></i>
                     </div>
                 </article>
