--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -193,7 +193,7 @@
             </div>
         </section>
 
-            <input type="submit" class="commander" value="Commander"/h6>
+            <input type="submit" class="commander" value="Commander">
 
         </form>
     </main>
